--- a/00_orientation/helloWorld.ipynb
+++ b/00_orientation/helloWorld.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d85b887e",
    "metadata": {},
    "outputs": [
@@ -11,13 +11,15 @@
      "output_type": "stream",
      "text": [
       "Hello! World!\n",
-      "こんにちは！ 世界！\n"
+      "こんにちは！ 世界！\n",
+      "開発を行ないます！\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello! World!\")\n",
-    "print(\"こんにちは！ 世界！\")"
+    "print(\"こんにちは！ 世界！\")\n",
+    "print(\"開発を行ないます！\")"
    ]
   }
  ],
